# llm_evaluator

./: .gitignore  README.md  baseline_injection.py  config.example.yaml  main.py  pyproject.toml
local_models/: Modelfile  Modelfile.latest
logs/: log.txt
openspec/: project.md
openspec/changes/add-canary-token-detection/: proposal.md  tasks.md
openspec/changes/add-core-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/add-flexible-rag-endpoint-config/: proposal.md  tasks.md
openspec/changes/add-guard-model-evaluation/: design.md  proposal.md  tasks.md
openspec/changes/add-prompt-security-test-suite/: design.md  proposal.md  tasks.md
openspec/changes/add-rag-mutator-loop/: proposal.md  tasks.md
openspec/changes/add-rag-response-profile/: proposal.md  tasks.md
openspec/changes/add-rag-security-suite/: design.md  proposal.md  tasks.md
openspec/changes/add-security-dashboard/: proposal.md  tasks.md
reports/: report_20251212_222407.html  report_20251212_222407.json  report_20251212_230925.html  report_20251212_230925.json  report_20251212_232542.html  report_20251212_232542.json
src/eval_fw/: __init__.py  log_config.py
tests/: test_cli_rag.py  test_config.py  test_engine.py  test_guard.py  test_logging.py  test_providers.py  test_rag.py  test_rag_ascii_report.py  test_rag_client.py  test_rag_thread_sidecar.py
use_cases/: KnowledgeTool.yml  bypass_tests.json  db.json  kl.json  rag_encoded_suite.json  rag_tests.2.json  rag_tests.json  rag_tests1.json  rag_tests_cleaned.json  rag_tests_generic.json  rag_winners.json  tests.json
(+64 files in other folders)
